--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-homework-template",
+  "name": "goit-react-hw-08-phonebook",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://goitacademy.github.io/react-homework-template/",
@@ -10,6 +10,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "source-map-resolve": "^0.6.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
