--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "source-map-resolve": "^0.6.0",
+    "toastify-js": "^1.12.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
